--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,37 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.580
+head: 1.584
 branch:
 locks: strict
-	gilles: 1.580
+	gilles: 1.584
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 580;	selected revisions: 580
+total revisions: 584;	selected revisions: 584
 description:
 ----------------------------
-revision 1.580	locked by: gilles;
+revision 1.584	locked by: gilles;
+date: 2014/02/05 00:40:59;  author: gilles;  state: Exp;  lines: +77 -50
+Debug. Print separator given by NAMESPACE even when --sep1 oe --sep2 is used.
+Debug. Prints prefix given by NAMESPACE even when --prefix1 or --prefix2 is used.
+(Preparation for advising not to use --prefix unless suggested)
+----------------------------
+revision 1.583
+date: 2014/02/04 03:04:35;  author: gilles;  state: Exp;  lines: +15 -11
+Bug fix. --ssl1 --tls2 was buggy because of default SSL_VERIFY_PEER. "Can not go to tls encryption on [localhost]:Unable to start TLS: Cannot determine peer hostname for verificationerror:00000000:lib(0):func(0):reason(0)"
+----------------------------
+revision 1.582
+date: 2014/01/24 01:43:19;  author: gilles;  state: Exp;  lines: +20 -12
+Bugfix. Check if going to tls is ok, exit otherwise with explicit error message.
+Thanks to Dennis Schridde for reporting this ugly bug.
+----------------------------
+revision 1.581
+date: 2014/01/15 02:42:06;  author: gilles;  state: Exp;  lines: +41 -15
+Added --debugmaxlinelength
+Added --minmaxlinelength to select messages with long lines only.
+----------------------------
+revision 1.580
 date: 2013/12/25 02:52:36;  author: gilles;  state: Exp;  lines: +51 -27
 Added --skipcrossduplicates to avoid copying messages that are already copied in another folder.
 Added --debugcrossduplicates to print which messages (UIDs) are skipped with --skipcrossduplicates (and in what other folders they are).
