--- a/README
+++ b/README
@@ -4,7 +4,7 @@ NAME
     More than 52 different IMAP server softwares supported with success, few
     failures.
 
-    $Revision: 1.580 $
+    $Revision: 1.584 $
 
 SYNOPSIS
     To synchronize imap account "foo" on "imap.truc.org" to imap account
@@ -383,7 +383,8 @@ IMAP SERVERS
      - Samsung Contact IMAP server 8.5.0
      - Scalix v10.1, 10.0.1.3, 11.0.0.431, 11.4.6
      - Sendmail Mail Store IMAP4rev1 (5.5.6/mstore-5-5-build-1874 [host1].
-     - SmarterMail, Smarter Mail 5.0 Enterprise, Smarter Mail 5.5 [host1], SmarterMail Professional 10.2 [host1].
+     - SmarterMail, Smarter Mail 5.0 Enterprise, Smarter Mail 5.5 [host1], 
+       SmarterMail Professional 10.2 [host1], Smarter Mail 11.7 [host1][host2].
      - Softalk Workgroup Mail 7.6.4 [host1].
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
      - Sun Java(tm) System Messaging Server 6.2-2.05,  6.2-7.05, 6.3
@@ -471,5 +472,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.580 2013/12/25 02:52:36 gilles Exp gilles $
+    $Id: imapsync,v 1.584 2014/02/05 00:40:59 gilles Exp gilles $
 
