--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,34 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.592
+head: 1.596
 branch:
 locks: strict
-	gilles: 1.592
+	gilles: 1.596
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 592;	selected revisions: 592
+total revisions: 596;	selected revisions: 596
 description:
 ----------------------------
-revision 1.592	locked by: gilles;
+revision 1.596	locked by: gilles;
+date: 2014/09/04 17:17:36;  author: gilles;  state: Exp;  lines: +11 -6
+Added --logfile in help output.
+Added --nolog   in help output.
+----------------------------
+revision 1.595
+date: 2014/09/01 19:39:16;  author: gilles;  state: Exp;  lines: +7 -7
+Changed output, no examine anymore, only select.
+----------------------------
+revision 1.594
+date: 2014/08/16 22:40:02;  author: gilles;  state: Exp;  lines: +14 -9
+Fixed "imapsync doesn't see created folders in stats phase". Second time.
+----------------------------
+revision 1.593
+date: 2014/07/08 11:19:43;  author: gilles;  state: Exp;  lines: +18 -7
+Added --nomixdiffcasefolders to avoid merging folders that are considered different on host1 but the same on destination host2 because of case sensitivities and insensitivities.
+----------------------------
+revision 1.592
 date: 2014/05/22 10:03:17;  author: gilles;  state: Exp;  lines: +23 -12
 Bugfix. Make TLS works with last IO::Socket::SSL default value (SSL_verify_mode => 'SSL_VERIFY_NONE') in tls.
 ----------------------------
