--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-# $Id: INSTALL,v 1.38 2014/05/29 23:42:11 gilles Exp gilles $
+# $Id: INSTALL,v 1.39 2014/09/19 19:37:08 gilles Exp gilles $
 # 
 # INSTALL file for imapsync 
 # imapsync : IMAP sync and migrate tool.
@@ -117,6 +117,11 @@ On Debian/Ubuntu:
   aptitude install liburi-perl                 # URI::Escape
   aptitude install libfile-copy-recursive-perl # File::Copy::Recursive
   aptitude install libio-tee-perl              # IO::Tee
+
+On Ubuntu 14 (thanks to http://www.jverdeyen.be/ubuntu/imapsync-on-ubuntu/):
+
+  sudo apt-get install makepasswd rcs perl-doc libio-tee-perl git
+  sudo apt-get install libmail-imapclient-perl libdigest-md5-file-perl libterm-readkey-perl libfile-copy-recursive-perl 
 
 On Mandriva:
 
