--- a/README
+++ b/README
@@ -4,7 +4,7 @@ NAME
     More than 52 different IMAP server softwares supported with success, few
     failures.
 
-    $Revision: 1.592 $
+    $Revision: 1.596 $
 
 SYNOPSIS
     To synchronize imap account "foo" on "imap.truc.org" to imap account
@@ -99,6 +99,9 @@ USAGE
                [--releasecheck]
                [--pidfile <filepath>]
                [--tmpdir  <dirpath>]
+               [--nolog] 
+               [--log] 
+               [--logfile <filepath>]
                [--version] [--help]
                [--tests] [--tests_debug]
 
@@ -483,5 +486,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.592 2014/05/22 10:03:17 gilles Exp gilles $
+    $Id: imapsync,v 1.596 2014/09/04 17:17:36 gilles Exp gilles $
 
